Archive2/d1/0772c63faef4bf/output
main.cpp: In function 'int main()':
main.cpp:21:12: error: call of overloaded 'funny(Alpha&)' is ambiguous
     funny(a);
            ^
main.cpp:21:12: note: candidates are:
main.cpp:8:6: note: void funny(T&&) [with T = Alpha&]
 void funny(T&&) {
      ^
main.cpp:13:6: note: void funny(T&) [with T = Alpha]
 void funny(T&) {
      ^
